appId: host.exp.exponent
---
- openLink: exp://127.0.0.1:8081

- extendedWaitUntil:
    visible:
      id: "input-email-login"
    timeout: 30000

- waitForAnimationToEnd

- tapOn:
    id: "input-email-login"
- inputText: "admin@gelatomec.com"

- hideKeyboard

- tapOn:
    id: "input-senha-login"
- inputText: "admin123"

- hideKeyboard

- tapOn:
    text: "Entrar"

- runFlow:
    when:
      visible:
        text: "Nunca"
    commands:
      - tapOn:
          text: "Nunca"
- runFlow:
    when:
      visible:
        text: "Never"
    commands:
      - tapOn:
          text: "Never"

- extendedWaitUntil:
    visible:
      text: "Painel"
    timeout: 30000
